# autocommit

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yaml
autocommit/: __main__.py  applications.py  config.py  git_api.py  git_commit.py  pieces_websocket.py
src/: __main__.py  applications.py  autocommit.py  pieces_websocket.py
