[tool.poetry]
name = "pieces autocommit"
version = "0.1.0"
description = "Autocommit tool generates a commiting message using pieces os"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websocket-client = "^1.7.0"
pieces_os_client = "1.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
